services/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <#update this to be used with kustomize>
