services/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
  labels:
    app: app
spec:
  selector:
    app: app
  type: ClusterIP # LoadBalancer # NodePort # 
  ports:
    - protocol: TCP
      name: m-http  
      port: 80
      targetPort: 8080
